# tensorflow-practice

./: .gitignore  Dockerfile  pyproject.toml
diffcse/: __init__.py  train.py
mnist/: __init__.py  dataloader.py  model.py  train.py
simcse/: config.yaml  dataloader.py  model.py  utils.py
utils/: __init__.py
