[tool.poetry]
name = "tensorflow-practice"
version = "0.1.0"
description = "TensorFlow Practice"
authors = ["GiDaeHyeon <spliter2157@gmail.com>"]
readme = "README.md"
packages = [{include = "tensorflow_practice"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
